Carousel image not showing in deployed site, fix

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -330,9 +330,11 @@ footer {
 
 /* Mailchimp*/
 #mc_embed_signup {
-    background:#fff; clear:left; 
+    background:#465957; 
+    clear:left; 
     font:14px Helvetica,Arial,sans-serif;  
     width:600px;
+    text-align: center;
 }
 
 /* fixed top navbar only on medium and up */
